bigger scroll-top button, fixes z-index

--- a/components/message/stylesheets/message.styl
+++ b/components/message/stylesheets/message.styl
@@ -9,6 +9,7 @@
   width 300px
   padding 15px
   font-size s_caption + 1
+  z-index header_z
 
 privacy-color('.message--', color)
 
